Tue Dec  9 22:42:50 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/native/org_opendds_jms_DCPSInfoRepo.cpp:

          Updated style to match DDS proper; fixed deprecated casts.

Tue Dec  9 22:04:28 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/im_jni.cpp:
        * java/idl2jni/runtime/i2jrt_Runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:

          Completed support for a global ClassLoader; this fixes an issue
          where ACE threads could not find classes defined in nested
          ClassLoaders.

Tue Dec  9 16:54:53 UTC 2008  Weiqi Gao  <gaow@ociweb.com>

        * java/jms/compat/opendds-jms-compat.iml:

          Trivial changes.

        * java/jms/compat/test/org/opendds/jms/client/MessageConsumerImplTest.java:
        * java/jms/src/org/opendds/jms/ConnectionImpl.java:
        * java/jms/src/org/opendds/jms/ConsumerDataReaderListener.java:
        * java/jms/src/org/opendds/jms/DurableMessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/SessionImpl.java:

          Added support for durable subscribers.

Tue Dec  9 05:38:57 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/INSTALL:

          Minor edits.

Tue Dec  9 05:28:24 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/runtime/i2jrt_Runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:

          Updated context class loading behavior.

Tue Dec  9 02:33:46 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/runtime/i2jrt/Runtime.java:
        * java/idl2jni/runtime/i2jrt_Runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.mpc: