@@ -8,7 +8,7 @@
 CORBA::Object_ptr recoverTaoObject (JNIEnv *jni, jobject source)
 {
   if (!source) return CORBA::Object::_nil ();
-  jclass clazz = jni->FindClass ("i2jrt/TAOObject");
+  jclass clazz = findClass (jni, "i2jrt/TAOObject");
   jfieldID fid = jni->GetFieldID (clazz, "_jni_ptr", "J");
   jlong _jni_ptr = jni->GetLongField (source, fid);
   return reinterpret_cast<CORBA::Object_ptr> (_jni_ptr);
@@ -104,7 +104,7 @@ jobject JNICALL Java_i2jrt_TAOObject__1duplicate (JNIEnv *jni, jobject jThis)
 
 void JNICALL Java_i2jrt_TAOObject__1release (JNIEnv *jni, jobject jThis)
 {
-  jclass clazz = jni->FindClass ("i2jrt/TAOObject");
+  jclass clazz = findClass (jni, "i2jrt/TAOObject");
   jfieldID fid = jni->GetFieldID (clazz, "_jni_ptr", "J");
   jlong _jni_ptr = jni->GetLongField (jThis, fid);
   CORBA::Object_ptr o = reinterpret_cast<CORBA::Object_ptr> (_jni_ptr);
